clusters/apps/istio-lab/01-svc-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-a
  namespace: istio-lab
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: svc-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-a
  namespace: istio-lab
spec:
  replicas: 1
  selector:
    matchLabels: {app: svc-a}
  template:
    metadata:
      labels: {app: svc-a, version: v1}
    spec:
      serviceAccountName: svc-a
      containers:
      - name: echo
        image: mendhak/http-https-echo:29
        resources:
          requests: {cpu: "10m", memory: "16Mi"}
