clusters/apps/istio-lab/01-svc-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-b
  namespace: istio-lab
spec:
  ports:
  - port: 8080
    name: http
  selector: {app: svc-b}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-b-v1
  namespace: istio-lab
spec:
  replicas: 1
  selector:
    matchLabels: {app: svc-b, version: v1}
  template:
    metadata:
      labels: {app: svc-b, version: v1}
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:29
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svc-b-v2
  namespace: istio-lab
spec:
  replicas: 1
  selector:
    matchLabels: {app: svc-b, version: v2}
  template:
    metadata:
      labels: {app: svc-b, version: v2}
    spec:
      containers:
      - name: echo
        image: mendhak/http-https-echo:29
