clusters/apps/istio-lab/02-dr-default.yaml
apiVersion: networking.istio.io/v2
kind: DestinationRule
metadata:
  name: default
  namespace: istio-lab
spec:
  host: "*.istio-lab.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
