clusters/apps/istio-lab/04-fault-b.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fault-b
  namespace: istio-lab
spec:
  hosts:
  - svc-b
  http:
  - fault:
      delay: {percentage: {value: 30}, fixedDelay: 2s}
      abort: {percentage: {value: 30}, httpStatus: 503}
    route:
    - destination: {host: svc-b}
