clusters/apps/istio-lab/07-deny-all.yaml
apiVersion: security.istio.io/v2
kind: AuthorizationPolicy
metadata:
  name: deny-all
  namespace: istio-lab
spec: {}
