clusters/apps/istio-lab/08-allow-a-to-b.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-a-to-b
  namespace: istio-lab
spec:
  selector:
    matchLabels: {app: svc-b}
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/istio-lab/sa/svc-a"]
